--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,13 +109,19 @@ body {
   align-items: center; }
 
 .alert {
-  height: 80px; }
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 .alert-success {
   background-color: #d6efb4;
   color: #88DB15; }
 
-.alert-success {
+.alert-danger {
   background-color: #efb4b4;
   color: #c71b1b; }
 
@@ -710,18 +716,21 @@ footer {
       justify-content: space-between;
       padding: 10px 20px;
       background-color: #fff;
-      margin: 20px;
-      position: relative; }
+      margin: 20px; }
       .dashboard .main-trip .trip .form-search {
         margin: 30px auto; }
       .dashboard .main-trip .trip button.delete {
         font-size: 1.4rem;
         position: absolute;
         top: 5px;
+        cursor: pointer;
         right: -10px;
         padding: 0px 5px;
         visibility: hidden;
         background-color: #c71b1b; }
+      .trip-div {
+        position: relative;
+      }
       .dashboard .main-trip .trip p {
         margin: 0px auto; }
       .dashboard .main-trip .trip .img-rider {
