--- a/templates/run/detailRun.html.twig
+++ b/templates/run/detailRun.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ run.departure.cityName }} -> {{ run.arrival.cityName }}</h1>
+    <h1>{{ run.departure }} -> {{ run.arrival }}</h1>
 
     Pasengers:
     <ul>
