--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,9 +38,9 @@
                     <div class="menu">
                         <img class="burger" src="{{ asset('img/menu.png') }}" alt="icon burger du menu utilisateur" size="100">
                         <ul class="nav">
-                            <li><a href="{{ path('ridecourt') }}">Tableau de bord</a></li>
+                            <li><a href="{{ path('myRun') }}">Tableau de bord</a></li>
                             <li class="border-top"><a href="{{ path('addRun') }}">Proposer un trajet</a></li>
-                            <li class="border-top"><a href="{{ path('searchride') }}">Rechercher un trajet</a></li>
+                            <li class="border-top"><a href="{{ path('searchRun') }}">Rechercher un trajet</a></li>
                             <li class="border-top"><a href="{{ path('account') }}">Mon profil</a></li>
                             <li class="border-top"><a href="{{ path('logout') }}">Se déconnecter</a></li>
                         </ul>
