--- a/templates/run/detailRun.html.twig
+++ b/templates/run/detailRun.html.twig
@@ -6,8 +6,8 @@
 
     Pasengers:
     <ul>
-    {% for pasenger in run.pasengers %}
-       <li> {{ pasenger.firstname }}</li>
+    {% for passenger in run.passengers %}
+       <li> {{ passenger.firstname }}</li>
     {% else %}
     {% endfor %}
 
