--- a/templates/tableau/search_run.html.twig
+++ b/templates/tableau/search_run.html.twig
@@ -13,7 +13,7 @@
             <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
                 <div class="img-rider">
                     {% if app.user.picture != null %}
-                        <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ app.user.picture) }}' )"></div>
+                        <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ run.driver.picture) }}' )"></div>
                     {% else %}
                         <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
                     {% endif %}
