--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -968,15 +968,17 @@
 					}
 
 					.city {
-						color: $black;
+						color: $rose;
 						text-transform: uppercase;
 						font-size: 1.7rem;
 						padding-top: 10px;
 						padding-left: 10px;
 						list-style: circle;
+						font-family: $latoBlack;
 
 						span {
 							margin: 0px 10px;
+							color: $black;
 						}
 					}
 				}
@@ -985,12 +987,12 @@
 					@extend .flex-center;
 					flex-direction: column;
 					width: 150px;
-					
+
 					.day {
 						padding-top: 10px;
 						line-height: 2rem;
 						color: $rose;
-						font-size: 4rem;
+						font-size: 3rem;
 					}
 
 					.month {
@@ -999,7 +1001,8 @@
 					}
 
 					.hour {
-						color: $black;
+						color: $rose;
+						font-size: 2rem;
 					}
 				}
 
