--- a/templates/tableau/ride_to_court.html.twig
+++ b/templates/tableau/ride_to_court.html.twig
@@ -5,32 +5,33 @@
     <h3>Vos trajets</h3>
     {% for run in runs %}
         <div class="trip-div">
-
-        <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
-            <form action="{{ path('deleteRun', {'id': run.id}) }}">
-                <button class="delete" onclick="suppRun()">x</button>
-            </form>
-            <div class="img-rider">
-                {% if app.user.picture != null %}
-                    <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ app.user.picture) }}' )"></div>
-                {% else %}
-                    <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
-                {% endif %}
-            </div>
-            <div class="name-step">
-                <p class="name">{{ run.driver.lastname | upper }} {{ run.driver.firstname }}</p>
-                <p class="phone">Nbr de places restantes : <span>{{ run.places }}</span> Prix : <span>{{ run.price }} €</span></p>
-                <p class="city">{{ run.departure }}<span>--></span>{{ run.arrival }}</p>
-            </div>
-            <div class="date-ride">
-                <p class="day">{{ run.departureDate.format('d') }}</p>
-                <p class="month">{{ run.departureDate.format('F') }}</p>
-                <p class="hour">{{ run.departureTime.format('H') }}<span>H</span>{{ run.departureTime.format('i') }}</p>
-            </div>
-        </a>
+            <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
+                <form action="{{ path('deleteRun', {'id': run.id}) }}">
+                    <button class="delete">x</button>
+                </form>
+                <div class="img-rider">
+                    {% if app.user.picture != null %}
+                        <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ app.user.picture) }}' )"></div>
+                    {% else %}
+                        <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
+                    {% endif %}
+                </div>
+                <div class="name-step">
+                    <p class="name"><span style="color: #E6146C;">{{ run.driver.firstname | upper }}</span> {{ run.driver.lastname }}</p>
+                    <p class="phone">Nbr de places restantes : <span>{{ run.places }}</span> Prix : <span>{{ run.price }} €</span></p>
+                    <p class="city">{{ run.departure }}<span>--></span>{{ run.arrival }}</p>
+                </div>
+                <div class="date-ride">
+                    <p class="day">{{ run.departureDate.format('d') }}</p>
+                    <p class="month">{{ run.departureDate.format('F') }}</p>
+                    <p class="hour">{{ run.departureTime.format('H') }}<span>H</span>{{ run.departureTime.format('i') }}</p>
+                </div>
+            </a>
         </div>
-    {% else %}
-        <p>Pas de trajets pour le moment</p>
+        {% else %}
+        <div class="account-runs-detail">
+            <p><span class="account-noRun">Vous n'avez pas encore proposé de trajets</span></h2>
+        </div>
     {% endfor %}
 
 
