--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/destination.png') }}" alt="Une icone pour la destination">
-            <input id="search-run-arrival" type="text" name="search-run-departure" placeholder="où allez-vous ?">
+            <input id="search-run-arrival" type="text" name="search-run-departure" placeholder="où allez-vous ?" value="{{ 'ok' }}">
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
