--- a/templates/tableau/search_run.html.twig
+++ b/templates/tableau/search_run.html.twig
@@ -30,5 +30,10 @@
                 </div>
             </a>
         </div>
+
+    {% else %}
+
+        <p>Pas de trajets pour cette date</p>
+
     {% endfor %}
 {% endblock %}
