--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -1,7 +1,7 @@
 
 
 {% macro formSearch() %}
-    <form action="#" class="form-search" method="POST"> <!-- Action : page avec le résultat - Method : get -->
+    <form action="" class="form-search" method="POST">
         <div class="input-icon">
             <img src="{{ asset('img/localisation.png') }}" alt="Une icone pour le départ">
             <input id="search-run-departure" type="text" name="search-run-departure" placeholder="d'où partez-vous?">
@@ -12,8 +12,8 @@
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
-            <input type="date" name="departure-schedule" placeholder="date de départ">
+            <input id="search-run-date" type="date" name="date" placeholder="date de départ">
         </div>
-        <button type="submit">Rechercher</button> <!-- Diriger vers la recherche -->
+        <button id="search-run-button" type="submit">Rechercher</button>
     </form>
 {% endmacro %}
