Ajout de faker -- hydratation de la bdd

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,7 +81,8 @@
 			</div>
         </footer>
         <script type="text/javascript"
-           src="https://maps.googleapis.com/maps/api/js?libraries=places&types=(cities)&language=fr&region=fr&amp;key=AIzaSyDn3sbn2UzlDbSiTJxLib51hkW-aSk8mmo"></script>
+           src="https://maps.googleapis.com/maps/api/js?libraries=places&types=(cities)&language=fr&region=fr&amp;key=AIzaSyDn3sbn2UzlDbSiTJxLib51hkW-aSk8mmo">
+        </script>
         <script src="{{ asset('js/script.js') }}"></script>
     </body>
 </html>
