--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -14,6 +14,8 @@
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
             <input type="date" name="departure-schedule" placeholder="date de départ">
         </div>
-        <button type="submit">Rechercher</button> <!-- Diriger vers la recherche -->
+        <form action="{{ path('listRuns') }}">
+            <button type="submit">Rechercher</button> <!-- Diriger vers la recherche -->
+        </form>
     </form>
 {% endmacro %}
