--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -1,19 +1,19 @@
 
 
 {% macro formSearch() %}
-    <form action="" class="form-search" method="POST">
+    <form id="search-run-submit" action="{{ path('searchRunAjax') }}" class="form-search" method="POST">
         <div class="input-icon">
             <img src="{{ asset('img/localisation.png') }}" alt="Une icone pour le départ">
-            <input id="search-run-departure" type="text" name="search-run-departure" placeholder="d'où partez-vous?">
+            <input id="search-run-departure" type="text" name="departure" placeholder="d'où partez-vous?" required>
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/destination.png') }}" alt="Une icone pour la destination">
-            <input id="search-run-arrival" type="text" name="search-run-departure" placeholder="où allez-vous ?">
+            <input id="search-run-arrival" type="text" name="arrival" placeholder="où allez-vous ?" required>
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
-            <input id="search-run-date" type="date" name="date" placeholder="date de départ">
+            <input id="search-run-date" type="date" name="date" placeholder="date de départ" required>
         </div>
-        <button id="search-run-button" type="submit">Rechercher</button>
+        <button type="submit">Rechercher</button>
     </form>
 {% endmacro %}
