requête ajax possible Ouiiiiiiiii

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,7 +90,7 @@
             $(document).ready( function() {
 
                 $('#search-run-submit').on("submit", function (e) {
-                    e.preventDefault();
+                    // e.preventDefault();
                     var data = $(this).serialize();
 
                     console.log(data);
