--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -4,15 +4,15 @@
     <form id="search-run-submit" action="{{ path('searchRunAjax') }}" class="form-search" method="POST">
         <div class="input-icon">
             <img src="{{ asset('img/localisation.png') }}" alt="Une icone pour le départ">
-            <input id="search-run-departure" type="text" name="departure" placeholder="d'où partez-vous?" required>
+            <input id="search-run-departure" type="text" name="departure" placeholder="d'où partez-vous?" onclick="this.value = '';">
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/destination.png') }}" alt="Une icone pour la destination">
-            <input id="search-run-arrival" type="text" name="arrival" placeholder="où allez-vous ?" required>
+            <input id="search-run-arrival" type="text" name="arrival" placeholder="où allez-vous ?" onclick="this.value = '';">
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
-            <input id="search-run-date" type="date" name="date" placeholder="date de départ" required>
+            <input id="search-run-date" type="date" name="date" placeholder="date de départ">
         </div>
         <button type="submit">Rechercher</button>
     </form>
