--- a/templates/tableau/my_run.html.twig
+++ b/templates/tableau/my_run.html.twig
@@ -5,9 +5,12 @@
     <h3>Vos trajets</h3>
     {% for run in runs %}
         <div class="trip-div">
+            <form  class="delete-my-run" action="{{ path('deleteRun', {'id' : run.id}) }}">
+                <button onclick="deleteMyRun()">x</button>
+            </form>
+
 
         <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
-            <button class="delete" onclick="deleteRun()">x</button>
             <div class="img-rider">
                 {% if app.user.picture != null %}
                     <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ app.user.picture) }}' )"></div>
