--- a/templates/tableau/search_run.html.twig
+++ b/templates/tableau/search_run.html.twig
@@ -12,11 +12,11 @@
 
             <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
                 <div class="img-rider">
-                    {% if app.user.picture != null %}
-                        <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ run.driver.picture) }}' )"></div>
-                    {% else %}
-                        <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
-                    {% endif %}
+                {% if run.driver.picture == null %}
+                    <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
+                {% else %}
+                    <div class="img-profil-rider" style="background-image:url('{{ asset('img_upload/' ~ run.driver.picture) }}'); -webkit-filter: saturate(40%);"></div>
+                {% endif %}
                 </div>
                 <div class="name-step">
                     <p class="name"><span>{{ run.driver.firstname | upper }} {{ run.driver.lastname }}</span><span class="drive_price">{{ run.price }}€</span></p>
